--- a/Session 20 Logistic Regression.ipynb
+++ b/Session 20 Logistic Regression.ipynb
@@ -1129,12 +1129,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "3214154f-f090-4ca9-80ef-d7cdf3d4bbf6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'plot_confusion_matrix' from 'sklearn.metrics' (C:\\Users\\danisha.ansari\\AppData\\Local\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m accuracy_score, confusion_matrix,classification_report, plot_confusion_matrix\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'plot_confusion_matrix' from 'sklearn.metrics' (C:\\Users\\danisha.ansari\\AppData\\Local\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\__init__.py)"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.metrics import accuracy_score, confusion_matrix,classification_report, ConfusionMatrixDisplay"
+    "from sklearn.metrics import accuracy_score, confusion_matrix,classification_report, plot_confusion_matrix"
    ]
   },
   {
